# MosaicAI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: api_reference.md  system_requirements.md  test_specification.md
examples/: auto_summarize_translate.py  basic_usage.py  interactive_image_analyzer.py  multi_model_analyzer.py
mosaicai/: __init__.py  client.py  config.py  exceptions.py  mosaicai.py
mosaicai/models/: __init__.py  base.py  chatgpt.py  claude.py  gemini.py  perplexity.py
mosaicai/utils/: api_key_manager.py  logger.py
tests/: __init__.py
tests/integration/: test_mosaic_ai_integration.py
tests/unit/: test_api_key_manager.py  test_chatgpt.py  test_claude.py  test_gemini.py  test_mosaic_ai.py  test_perplexity.py
